force-app/main/default/objects/Account/fields/FiscalCity__c.field-meta.xml
<CustomField>
    <fullName>FiscalCity__c</fullName>
    <label>Fiscal City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>