force-app/main/default/objects/Account/fields/FiscalCountry__c.field-meta.xml
<CustomField>
    <fullName>FiscalCountry__c</fullName>
    <label>Fiscal Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>