force-app/main/default/objects/Account/fields/FiscalLatitude__c.field-meta.xml
<CustomField>
    <fullName>FiscalLatitude__c</fullName>
    <label>Fiscal Latitude</label>
    <precision>15</precision>
    <scale>13</scale>
    <type>Number</type>
</CustomField>