force-app/main/default/objects/Account/fields/FiscalLongitude__c.field-meta.xml
<CustomField>
    <fullName>FiscalLongitude__c</fullName>
    <label>Fiscal Longitude</label>
    <precision>15</precision>
    <scale>13</scale>
    <type>Number</type>
</CustomField>