force-app/main/default/objects/Account/fields/FiscalPostalCode__c.field-meta.xml
<CustomField>
    <fullName>FiscalPostalCode__c</fullName>
    <label>Fiscal Zip/Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>