force-app/main/default/objects/Account/fields/FiscalState__c.field-meta.xml
<CustomField>
    <fullName>FiscalState__c</fullName>
    <label>Fiscal State/Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>