force-app/main/default/objects/Account/fields/FiscalStreet__c.field-meta.xml
<CustomField>
    <fullName>FiscalStreet__c</fullName>
    <label>Fiscal Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>