force-app/main/default/objects/Account/validationRules/Test.validationRule-meta.xml
<ValidationRule>
    <fullName>Test</fullName>
    <active>true</active>
    <description>Test validation rule for salesforce dx development workflow</description>
    <errorConditionFormula>AccountNumber = &apos;1000&apos;</errorConditionFormula>
    <errorMessage>Account number can&apos;t be greater than 999</errorMessage>
</ValidationRule>